--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,5 +2,7 @@ Package: placeholder
 Type: Website
 Title: Does not matter.
 Version: 0.0.1
-Imports: rmarkdown
+Imports: 
+  rmarkdown,
+  govdown
 Remotes: rstudio/rmarkdown
